@@ -48,6 +48,7 @@ Thanks to Ed Howland and his Hotsax project for providing a simple way of parsin
 Thanks also to the SourceForge people and VA Linux for hosting this project.
 
 May 2002
+Ludovic Claude, freelance developer
 ludovicc@users.sourceforge.net
 
 
