@@ -1,87 +1,94 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-           
+               
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-           
+               
   <meta name="author" content="Ludovic Claude">
-           
-  <meta name="KeyWords" content="WinCvs, cvs, MacCvs, gCvs, jCVS, firewall, proxy">
+               
+  <meta name="KeyWords" content="WinCvs, cvs, MacCvs, gCvs, jCVS, firewall, proxy, retrieve cvs tree, grab">
   <title>CVSGrab</title>
 </head>
   <body>
-  <br>
-   
+   <br>
+     
 <table cellpadding="2" cellspacing="2" border="0" width="100%">
-    <tbody>
-      <tr>
-        <td valign="Top" width="200">              
+     <tbody>
+       <tr>
+         <td valign="Top" width="200">                     
       <div align="Center"><big><big><b>CVSGrab</b></big></big><br>
-        </div>
+         </div>
+         <br>
+         <a href="http://sourceforge.net/projects/cvsgrab/">Sourceforge project
+  page</a>
+         <br>
+         <br>
+         <a href="http://sourceforge.net/project/showfiles.php?group_id=52481&amp;release_id=88779">
+    Download</a>
+         <br>
+         <br>
+    Related projects:<br>
+         <a href="http://viewcvs.sourceforge.net/">ViewCVS</a>
+         <br>
+         <a href="http://hotsax.sourceforge.net/">HotSAX</a>
+         <br>
+         <a href="http://www.jcvs.org/">jCVS</a>
+         <br>
         <br>
-        <a href="http://sourceforge.net/projects/cvsgrab/">Sourceforge project 
- page</a>
         <br>
         <br>
-        <a href="http://sourceforge.net/project/showfiles.php?group_id=52481&amp;release_id=88779">
-   Download</a>
         <br>
         <br>
-   Related projects:<br>
-        <a href="http://viewcvs.sourceforge.net/">ViewCVS</a>
+        <a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=52481&amp;type=5" width="210" height="62" border="0" alt="SourceForge Logo">
+        </a>
         <br>
-        <a href="http://hotsax.sourceforge.net/">HotSAX</a>
-        <br>
-        <a href="http://www.jcvs.org/">jCVS</a>
-        <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <br>
-       <a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=52481&amp;type=5" width="210" height="62" border="0" alt="SourceForge Logo">
-       </a>
-       <br>
-        <br>
-        </td>
-        <td valign="Top"><br>
-   WHAT IS IT:<br>
-        <br>
-   CVSGrab is another kind of CVS client. When other CVS clients use the
-cvs  protocol<br>
-   to read the repository, CVSGrab reads the repository via its ViewCVS web 
- interface.<br>
-   The advantage is that if you are behind a firewall that prevents you from 
- updating files<br>
-   from a remote CVS server, this program will be able to bypass the firewall 
- and download<br>
-   the latest files from the repository. Disadvantages are that you have
+         <br>
+         </td>
+         <td valign="Top"><br>
+    WHAT IS IT:<br>
+         <br>
+    CVSGrab is another kind of CVS client. When other CVS clients use the 
+cvs  protocol or ssh<br>
+    to read the repository, CVSGrab reads the repository via its ViewCVS
+web   interface.<br>
+    The advantage is that if you are behind a firewall that prevents you
+from   updating files<br>
+    from a remote CVS server, this program will be able to bypass the firewall
+  and download<br>
+    the latest files from the repository. Disadvantages are that you have 
 read-only  access<br>
-   to the repository, and the repository needs to be public (password-protected 
- sites are not <br>
-   yet supported, they will be if people ask for it...)<br>
-        <br>
-   HOW IT WORKS:<br>
-        <br>
-   It starts by reading the top page of the ViewCVS repository, then parses 
- the links in this<br>
-   page and browses all the pages bellow while downloading the files in them.<br>
-   In addition, the CVS administration files (the files under the Cvs folder 
- present on every directory) <br>
-   are created and store the version number for each files. The next time 
-you  run CVSGrab, those version<br>
-   numbers are used to download only the files that have being updated.<br>
-        <br>
-TESTED WITH:<br>
-- ViewCVS 0.8 on Sourceforge,<br>
-- ViewCVS 0.9.2 on jakata.apache.org<br>
-        </td>
-      </tr>
-       
-  </tbody>  
+    to the repository, and the repository needs to be public (password-protected
+  sites are not <br>
+    yet supported, they will be if people ask for it...)<br>
+         <br>
+    HOW IT WORKS:<br>
+         <br>
+    It starts by reading the top page of the ViewCVS repository, then parses
+  the links in this<br>
+    page and browses all the pages bellow while downloading the files in
+them.<br>
+    In addition, the CVS administration files (the files under the Cvs folder
+  present on every directory) <br>
+    are created and store the version number for each files. The next time
+ you  run CVSGrab, those version<br>
+    numbers are used to download only the files that have being updated.<br>
+         <br>
+ TESTED WITH:<br>
+      <br>
+ - ViewCVS 0.8 on Sourceforge,<br>
+ - ViewCVS 0.9.2 on jakata.apache.org<br>
+      <br>
+Author:<br>
+Ludovic Claude (<a href="mailto:ludovicc@users.sourceforge.net">email</a>
+), freelance developer<br>
+         </td>
+       </tr>
+           
+  </tbody>   
 </table>
-  <br>
-  <br>
-   
+   <small><small>&copy;2002, Ludovic Claude</small></small><small><small>
+, all rights reserved</small></small><br>
+   <br>
+     
 </body>
 </html>
